<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/credentialContainer"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/enter_message_background"
        android:hint="@string/sign_up_name"
        android:padding="10dp"
        android:textColorHint="@color/grey"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/credentialContainer"
        app:layout_constraintStart_toStartOf="@id/credentialContainer"
        app:layout_constraintEnd_toEndOf="@id/credentialContainer"/>

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/enter_message_background"
        android:hint="@string/signup_login_email"
        android:padding="10dp"
        android:textColorHint="@color/grey"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintStart_toStartOf="@id/credentialContainer"
        app:layout_constraintEnd_toEndOf="@id/credentialContainer"/>

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/enter_message_background"
        android:hint="@string/signup_login_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/grey"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/userEmail"
        app:layout_constraintEnd_toEndOf="@id/credentialContainer"
        app:layout_constraintStart_toStartOf="@id/credentialContainer"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/add_to_message_button"
        android:text="@string/login_button"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/userPassword"
        app:layout_constraintBottom_toBottomOf="@id/credentialContainer"
        app:layout_constraintStart_toStartOf="@id/credentialContainer"
        app:layout_constraintEnd_toStartOf="@id/signUpButton"/>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/add_to_message_button"
        android:text="@string/sign_up_button"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/userPassword"
        app:layout_constraintBottom_toBottomOf="@id/credentialContainer"
        app:layout_constraintStart_toEndOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="@id/credentialContainer"/>

    <Button
        android:id="@+id/createUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/add_to_message_button"
        android:text="@string/sign_up_create_button"
        android:layout_margin="10dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/userPassword"
        app:layout_constraintBottom_toBottomOf="@id/credentialContainer"
        app:layout_constraintStart_toStartOf="@id/credentialContainer"
        app:layout_constraintEnd_toStartOf="@id/cancelButton"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/add_to_message_button"
        android:text="@string/sign_up_cancel_button"
        android:layout_margin="10dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/userPassword"
        app:layout_constraintBottom_toBottomOf="@id/credentialContainer"
        app:layout_constraintStart_toEndOf="@id/createUserButton"
        app:layout_constraintEnd_toEndOf="@id/credentialContainer"/>

</androidx.constraintlayout.widget.ConstraintLayout>