<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/messagesActionBar"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/grey"
        app:layout_constraintStart_toStartOf="@id/messagesActionBar"
        app:layout_constraintEnd_toEndOf="@id/messagesActionBar"
        app:layout_constraintBottom_toBottomOf="@id/messagesActionBar"/>

    <TextView
        android:id="@+id/newMessageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="33dp"
        android:text="@string/new_message"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/messagesActionBar"
        app:layout_constraintEnd_toEndOf="@id/messagesActionBar"
        app:layout_constraintStart_toStartOf="@id/messagesActionBar"
        app:layout_constraintTop_toTopOf="@id/messagesActionBar" />

    <TextView
        android:id="@+id/cancelMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/messagesActionBar"
        app:layout_constraintTop_toTopOf="@id/messagesActionBar"
        app:layout_constraintBottom_toBottomOf="@id/messagesActionBar"
        android:text="@string/cancel_message"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:textColor="@color/purple_500"
        android:layout_margin="10dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toMessageContainer"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/messagesActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/grey"
        app:layout_constraintStart_toStartOf="@id/toMessageContainer"
        app:layout_constraintEnd_toEndOf="@id/toMessageContainer"
        app:layout_constraintBottom_toBottomOf="@id/toMessageContainer"/>

    <TextView
        android:id="@+id/toText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/to_text"
        android:textSize="18sp"
        android:textColor="@color/grey"
        app:layout_constraintTop_toTopOf="@id/toMessageContainer"
        app:layout_constraintBottom_toBottomOf="@id/toMessageContainer"
        app:layout_constraintStart_toStartOf="@id/toMessageContainer"/>

    <TextView
        android:id="@+id/addToMessageAdded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@null"
        app:layout_constraintTop_toTopOf="@id/toMessageContainer"
        app:layout_constraintBottom_toBottomOf="@id/toMessageContainer"
        app:layout_constraintStart_toEndOf="@id/toText"
        app:layout_constraintEnd_toStartOf="@id/addToMessageButton"/>

    <EditText
        android:id="@+id/addToMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/add_contact"
        android:textColorHint="@color/grey"
        android:background="@null"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/toMessageContainer"
        app:layout_constraintBottom_toBottomOf="@id/toMessageContainer"
        app:layout_constraintStart_toEndOf="@id/toText"
        app:layout_constraintEnd_toStartOf="@id/addToMessageButton"/>

    <ImageButton
        android:id="@+id/addToMessageButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_add"
        android:background="@drawable/add_to_message_button"
        app:layout_constraintTop_toTopOf="@id/toMessageContainer"
        app:layout_constraintBottom_toBottomOf="@id/toMessageContainer"
        app:layout_constraintStart_toEndOf="@id/addToMessage"
        app:layout_constraintEnd_toEndOf="@id/toMessageContainer"
        app:tint="@color/purple_500" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/messageBoxContainer"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/addResources"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:src="@drawable/ic_add"
        android:background="@drawable/add_to_message_button"
        app:layout_constraintBottom_toBottomOf="@id/messageBoxContainer"
        app:layout_constraintEnd_toStartOf="@id/messageContainer"
        app:layout_constraintStart_toStartOf="@id/messageBoxContainer"
        app:layout_constraintTop_toTopOf="@id/messageBoxContainer"
        app:tint="@color/purple_500"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/messageContainer"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:background="@drawable/enter_message_background"
        app:layout_constraintStart_toEndOf="@id/addResources"
        app:layout_constraintEnd_toEndOf="@id/messageBoxContainer"
        app:layout_constraintTop_toTopOf="@id/messageBoxContainer"
        app:layout_constraintBottom_toBottomOf="@id/messageBoxContainer"/>

    <EditText
        android:id="@+id/messageBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enter_message"
        android:maxHeight="65dp"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:background="@null"
        app:layout_constraintEnd_toStartOf="@id/sendMessage"
        app:layout_constraintStart_toStartOf="@id/messageContainer"
        app:layout_constraintTop_toTopOf="@id/messageContainer"
        app:layout_constraintBottom_toBottomOf="@id/messageContainer"/>

    <Button
        android:id="@+id/sendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/message_send"
        android:drawableTop="@drawable/ic_send"
        android:textColor="@color/white"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/messageContainer"
        app:layout_constraintBottom_toBottomOf="@id/messageContainer"
        app:layout_constraintStart_toEndOf="@id/messageBox"
        app:layout_constraintEnd_toEndOf="@id/messageContainer"/>

</androidx.constraintlayout.widget.ConstraintLayout>